k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
   nginx.ingress.kubernetes.io/rewrite-target: /
 namespace: selenium
spec:
 rules:
  - host: local-testing.com
    http:
     paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: selenium-router
             port:
               number: 4444
